Adjused navigation header for desktop and widescreen, hidden hambuger and make sure the navigation is visible all time. Also changed the p color for navigation header and footer.

--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ header {
   align-items: center;
   flex: 1;
   padding: 50px;
-
 }
 
 .header-text {
@@ -62,6 +61,10 @@ h2 {
   font-size: 20px;
 }
 
+.hamburger-section p {
+  color: #DABFAE;
+}
+
 .hamburger-menu-closed {
   /* flex: 1;
   align-self: flex-start;
@@ -83,38 +86,6 @@ h2 {
   position: relative;
 }
 
-/* .hamburger-menu-closed span {
-  height: 5px;
-  width: 100%;
-  background-color: black;
-  border-radius: 25px;
-  position: absolute;
-  right: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  transition: .3s ease;
-} */
-
-/* .hamburger-menu-closed span:nth-child(1) {
-  top: 25%;
-} */
-
-/* .hamburger-menu-closed span:nth-child(3) {
-  top: 75%;
-} */
-
-/* .hamburger-menu-closed .active span {
-  background-color: white;
-} */
-
-/* .hamburger-section-selection {
-  border-bottom: 2px solid #3F4E3D;
-} */
-
-/* .hamburger-section-selection:last-child {
-  border-bottom: none;
-} */
-
 .hamburger-menu-open {
   /* flex: 1;
   align-self: flex-start;
@@ -126,7 +97,7 @@ h2 {
 
 
   background-color: #6A7A5C;
-  border: 2px solid #3F4E3D;
+  /* border: 2px solid #3F4E3D; */
   height: 100vh;
   width: 100%;
   max-width: 768px;
@@ -315,6 +286,10 @@ footer {
   width: 100%;
 }
 
+footer p {
+  color: #DABFAE;
+}
+
 /*Responsive for mobile, tablet, desktop and widescreen. Changing the Flex direction from column for mobile to row for tablet, desktop and widescreen.*/
 
 /* Mobile */
@@ -386,6 +361,33 @@ footer {
   h2 {
     font-size: 25px;
   }
+
+  .hamburger-menu-closed {
+    display: none;
+
+  }
+
+  .hamburger-menu-open {
+    height: 15vh;
+    width: 50%;
+    position: static;
+    top: 0;
+    left: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    transition: linear;
+  }
+
+  .hamburger-section {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    padding: 4px;
+  }
+
 
   /*Parent to article .berry*/
   .berry-articles {
@@ -493,6 +495,32 @@ footer {
 
   h2 {
     font-size: 25px;
+  }
+
+  .hamburger-menu-closed {
+    display: none;
+
+  }
+
+  .hamburger-menu-open {
+    height: 15vh;
+    width: 50%;
+    position: static;
+    top: 0;
+    left: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    transition: linear;
+  }
+
+  .hamburger-section {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    padding: 4px;
   }
 
   /*Parent to article .berry*/
